# Base64-Tool-Desktop

./: .gitignore  README.md  base64-tool.lnk  package-lock.json  package.json  vite.config.js
.github/workflows/: build.yml
src/: index.html  main.js  polyfill.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  vite.config.js
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
