[package]
name = "base64-tool"
version = "1.0.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
base64 = "0.22"
tokio = { version = "1", features = ["fs", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.6"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
